test/files/neg/t835.check
t835.scala:2: error: Sequence argument type annotation `: _*` cannot be used here:
it is not the only argument to be passed to the single repeated parameter Int*;
sequence argument must be the last argument
  Console.println(List(List(1, 2, 3) : _*, List(4, 5, 6) : _*))
                                     ^
t835.scala:2: error: Sequence argument type annotation `: _*` cannot be used here:
it is not the only argument to be passed to the single repeated parameter Int*
  Console.println(List(List(1, 2, 3) : _*, List(4, 5, 6) : _*))
                                                         ^
2 errors
